--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "apollo-server": "^3.10.2",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.0",
     "nodemon": "^2.0.19",
     "uuid": "^9.0.0"
   }
